# nvc

./: .gitignore  Makefile.am  TODO  autogen.sh  config.h.in  configure.ac  nvc.1  nvc.1.md
lib/ieee/: Makefile.am
lib/std/: Makefile.am
lib/synopsys/: Makefile.am
src/: Makefile.am  cgen.c  driver.c  dump.c  elab.c  ident.c  lib.c  link.c  loc.h  nvc.c  opt.c  sem.c  simp.c  tree.c  type.c  unalias.c  util.c  util.h
src/rt/: Makefile.am  alloc.c  alloc.h  heap.c  jit.c  pprint.c  rt.h  rtkern.c  shell.c  slave.c  usignal.h  vcd.c
test/: Makefile.am  run_regr.sh  test_elab.c  test_heap.c  test_ident.c  test_lib.c  test_parse.c  test_sem.c  test_simp.c
test/regress/: issue46.vhd  reduced_elab3.vhd  reduced_image.vhd  testlist.txt  testreg.vhd
